# opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/shaders/: default.fs  default.vs  light.fs  light.vs
src/: main.cpp
src/render/: camera.cpp  camera.h  cube.cpp  cube.h  model.cpp  model.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sphere.cpp  sphere.h  texture.cpp  texture.h
